--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,49 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 100%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+.typewriter {
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  position: relative;
+  animation: typing 4s steps(30) 1s forwards,  
+            blink-caret 0.75s infinite;
+  animation-delay: 0s, 5s, 0s;
+  animation-iteration-count: infinite;
+}
+
+/* Crear el cursor (la línea que marca la escritura) */
+.typewriter::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1px;
+  height: 100%;
+  background-color: white; /* Color de la línea (cursor) */
+  animation: blink-caret 0.75s step-end infinite; /* Efecto de parpadeo */
+}
+
+/* Animación para simular el parpadeo del cursor (línea) */
+@keyframes blink-caret {
+  50% {
+    background-color: transparent;
+  }
+}
+
+
+
+
