--- a/app/globals.css
+++ b/app/globals.css
@@ -2,34 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: #dcdcdc;
+  background: #090909;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-@keyframes typing {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 100%;
-  }
-  100% {
-    width: 100%;
-  }
 }
 
 ::-webkit-scrollbar {
@@ -43,6 +25,19 @@ body {
 
 *::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 100%;
+  }
+  100% {
+    width: 100%;
+  }
 }
 
 .typewriter {
