--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html,
+body {
   overflow: hidden;
 }
 
@@ -10,6 +11,14 @@ html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+  -webkit-text-fill-color: inherit !important;
+  transition: background-color 9999s ease-out, color 9999s ease-out;
 }
 
 ::-webkit-scrollbar {
@@ -24,7 +33,6 @@ html, body {
 *::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-
 
 @keyframes typing {
   0% {
@@ -51,7 +59,7 @@ html, body {
   white-space: nowrap;
   overflow: hidden;
   position: relative;
-  animation: typing 2s steps(100) 1s 1 normal both; 
+  animation: typing 2s steps(100) 1s 1 normal both;
 }
 
 .typewriter-light::after,
@@ -72,9 +80,3 @@ html, body {
 .typewriter-dark::after {
   background-color: #dcdcdc;
 }
-
-
-
-
-
-
